<resources>
    <string name="app_name">NCSOFT 네일(케어)</string>
    <string name="heading"><b><font color="#f8b41c">NAIL</font><font color="black"> SERVICE</font></b></string>
    <string name="greeting">
        <font color="black">고객님 안녕하세요?\n
        NCSOFT Service의</font> <font color="red"><b>청각장애 네일아티스트</b></font><font color="black">입니다.\n
        현재 무료 네일케어 서비스를 제공하고 있습니다.\n
        서비스 한번 받아보세요. 최선을 다하겠습니다.^^\n
        약 </font><font color="#2b3499">20분</font><font color="black">동안 진행됩니다.</font>
    </string>
    <string name="later">
        <font color="black">관심가져주셔서 감사합니다\n</font>
        <font color="red"><b>다음번엔 꼭 이용해 주세요^^\n</b></font>
        <font color="black">즐거운 하루 되세요.</font>
    </string>
    <string name="menu_msg">각 서비스별로 소요되는 시간을 확인 후 원하시는 서비스를 선택해 주세요</string>
    <string name="basic_care">
        <font color="black" size="48">기본 케어\n</font><br /><font color="#2b3499" size="36">약20분 소요</font>
    </string>
    <string name="nail_care">
        <font color="black" size="48">네일 컬러\n</font><br /><font color="#2b3499" size="36">약25분 소요</font>
    </string>
    <string name="gel_nail">
        <font color="black" size="48">젤 네일\n</font><br /><font color="#2b3499" size="36">약25분 소요</font>
    </string>
    <string name="followme">
        <font color="black">감사합니다. 고객님!\n</font>
        <font color="#2b3499"><b>저를 따라와 주세요.\n</b></font>
        <font color="black">자리 안내해 드리겠습니다.</font>
    </string>
    <string name="svcbegin">
        <font color="black">고객님 지금부터\n 네일아트 서비스를 시작하겠습니다.\n</font>
        <font color="#2b3499"><b>도중에 아프거나 불편한 사항이 있으시면\n</b></font>
        <font color="black">언제든지 <font color="red"><b>우측의 아파요 버튼</b></font>을 눌러주세요!</font>
    </string>
    <string name="step1">Step 1. 원하시는 손톱의 모양을 골라 주세요</string>
    <string name="step2">Step 2. 먼저 채색 스타일을 선택후 적용할 손가락을 선택하세요.</string>
    <string name="step3">Step 3. 먼저 색상을 선택후 적용할 손가락을 선택하세요.</string>
    <string name="step4">아프시면 오른쪽의 Pain 버튼을 눌러주세요.</string>
    <string name="step5">
        <font color="black" size="40">고객님, 서비스는 어떠셨나요?\n</font>
        <font color="black" size="30">오늘 받으신 네일아트 사진을 해시태그\n
        <![CDATA[#]]>NCSOFT Service <![CDATA[#]]>NCSOFT Service <![CDATA[#]]>청각장애네일아티스트 <![CDATA[#]]>한국장애인고용공단 과 함께(필수사항)\n</font>
        <font color="black" size="40">인스타그램/페이스북/트위터에 공유하시면</font>
        <font color="#2b3499" size="50">추첨하여 손톱영양제 선물</font><font color="black" size="30">을 드립니다.</font>
    </string>
</resources>