<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:background="#2b3499"
        android:layout_width="match_parent"
        android:layout_height="15dp" />
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="15dp"
            android:weightSum="2"
            android:layout_height="match_parent">
            <LinearLayout
                android:background="#2b3499"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <LinearLayout
                android:background="#f8b41c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="#ffffff"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_width="240dp"
                    android:layout_height="96dp"
                    android:src="@drawable/logo_company" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_width="288dp"
                    android:layout_height="58dp"
                    android:src="@drawable/logo_kead" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="80dp"
                    android:textAlignment="center"
                    android:text="@string/heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:padding="20dp"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:onClick="onClickBasic"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/button_rr"
                    android:text="@string/basic_care"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp" />
                <TextView
                    android:onClick="onClickColor"
                    android:gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_rr"
                    android:text="@string/nail_care"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp" />
                <TextView
                    android:onClick="onClickGel"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/button_rr"
                    android:text="@string/gel_nail"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:padding="15dp"
                    android:onClick="onClickLater"
                    android:text="다음에.."
                    android:textColor="#000"
                    android:textSize="40dp"
                    android:background="@drawable/button_rr"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="#ccc" />
            <TextView
                android:layout_margin="10dp"
                android:text="@string/menu_msg"
                android:textSize="18dp"
                android:textColor="#333"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:layout_width="15dp"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:background="#2b3499"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <LinearLayout
                android:background="#f8b41c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="bottom"
        android:background="#f8b41c"
        android:layout_width="match_parent"
        android:layout_height="15dp" />
</LinearLayout>